mainfest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: end-to-end-app
  namespace: flask-app
  labels:
    app: end-to-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: end-to-end-app
  template:
    metadata:
      labels:
        app: end-to-end-app
    spec:
      containers:
        - name: end-to-end-container
          image: omarzaki222/end-to-end-project:6-7dc0373
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - mountPath: /app/data
              name: app-storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: end-to-end-pvc
